# src/main/java/gabia/cronMonitoring/controller/WebhookController.java
@@ -1,7 +1,7 @@
 package gabia.cronMonitoring.controller;
 
-import gabia.cronMonitoring.dto.request.WebhookSubscriptionDTO;
-import gabia.cronMonitoring.dto.response.WebhookDTO;
+import gabia.cronMonitoring.dto.request.WebhookDTO;
+import gabia.cronMonitoring.dto.response.WebhookInfoDTO;
 import gabia.cronMonitoring.service.WebhookSubscriptionService;
 import gabia.cronMonitoring.util.ValidUUID;
 import java.util.List;
@@ -9,6 +9,7 @@ import java.util.UUID;
 import javax.validation.Valid;
 import javax.validation.constraints.NotEmpty;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -25,30 +26,48 @@ public class WebhookController {
     private final WebhookSubscriptionService webhookSubscriptionService;
 
     @GetMapping(value = "/notifications/users/{userId}/crons/{cronJobId}/webhooks")
-    public ResponseEntity<List<WebhookDTO>> getWebhooks(
+    public ResponseEntity<List<WebhookInfoDTO>> getWebhooks(
         @NotEmpty @PathVariable(value = "userId") String userId,
         @ValidUUID @PathVariable(value = "cronJobId") UUID cronJobId) {
-        webhookSubscriptionService.getWebhooks(userId, cronJobId);
+        List<WebhookInfoDTO> webhooks = webhookSubscriptionService.getWebhooks(userId, cronJobId);
+
+        ResponseEntity responseEntity = new ResponseEntity(webhooks, HttpStatus.OK);
+        return responseEntity;
     }
 
     @PostMapping(value = "/notifications/users/{userId}/crons/{cronJobId}/webhooks")
-    public ResponseEntity<WebhookDTO> addWebhook(
+    public ResponseEntity<WebhookInfoDTO> addWebhook(
         @NotEmpty @PathVariable(value = "userId") String userId,
         @ValidUUID @PathVariable(value = "cronJobId") UUID cronJobId,
-        @RequestBody @Valid WebhookSubscriptionDTO request) {
+        @RequestBody @Valid WebhookDTO request) {
+        WebhookInfoDTO webhookInfoDTO = webhookSubscriptionService.addWebhook(userId, cronJobId, request);
+
+        ResponseEntity responseEntity = new ResponseEntity(webhookInfoDTO, HttpStatus.OK);
+        return responseEntity;
     }
 
-    @PatchMapping(value = "/notifications/users/{userId}/crons/{cronJobId}/webhooks")
-    public ResponseEntity<WebhookDTO> updateWebhook(
+    @PatchMapping(value = "/notifications/users/{userId}/crons/{cronJobId}/webhooks/{webhookId}")
+    public ResponseEntity<WebhookInfoDTO> updateWebhook(
         @NotEmpty @PathVariable(value = "userId") String userId,
         @ValidUUID @PathVariable(value = "cronJobId") UUID cronJobId,
-        @RequestBody @Valid WebhookSubscriptionDTO request) {
+        @ValidUUID @PathVariable(value = "webhookId") Long webhookId,
+        @RequestBody @Valid WebhookDTO request) {
+        WebhookInfoDTO webhookInfoDTO = webhookSubscriptionService
+            .updateWebhook(userId, cronJobId, webhookId, request);
+
+        ResponseEntity responseEntity = new ResponseEntity(webhookInfoDTO, HttpStatus.OK);
+        return responseEntity;
     }
 
-    @DeleteMapping(value = "/notifications/users/{userId}/crons/{cronJobId}/webhooks")
+    @DeleteMapping(value = "/notifications/users/{userId}/crons/{cronJobId}/webhooks/{webhookId}")
     public ResponseEntity deleteWebhook(
         @NotEmpty @PathVariable(value = "userId") String userId,
         @ValidUUID @PathVariable(value = "cronJobId") UUID cronJobId,
-        @RequestBody @Valid WebhookSubscriptionDTO request) {
+        @ValidUUID @PathVariable(value = "webhookId") Long webhookId,
+        @RequestBody @Valid WebhookDTO request) {
+        webhookSubscriptionService.deleteWebhook(webhookId);
+
+        ResponseEntity responseEntity = new ResponseEntity(HttpStatus.NO_CONTENT);
+        return responseEntity;
     }
 }
